--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "packageManager": "pnpm@10.24.0",
   "devDependencies": {
     "@types/node": "^25.0.3"
+  },
+  "dependencies": {
+    "ejs": "^3.1.10"
   }
 }
