--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^25.0.3"
   },
   "dependencies": {
-    "ejs": "^3.1.10"
+    "@modelcontextprotocol/sdk": "^1.25.1",
+    "ejs": "^3.1.10",
+    "zod": "~3.25.76"
   }
 }
